--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
 <html xmlns:th="https://www.thymeleaf.org">
     <head lang="en">
         <meta charset="UTF-8"/>
-        <title>crot</title>
+        <title>Toko Roti</title>
         <link rel="stylesheet" href="/main.css">
         
     </head>
