--- a/src/main/resources/static/index.css
+++ b/src/main/resources/static/index.css
@@ -43,6 +43,10 @@
     animation-duration: 2s;
   }
   
+  .center {
+
+    text-align: center;
+  }
   @keyframes fade-out {
     from {opacity: 100}
     to {opacity: 0}
